--- a/beginning/CSS/style.css
+++ b/beginning/CSS/style.css
@@ -10,3 +10,11 @@ body {
     margin: 0 5px;
     border: 2px solid navy;
 }
+#addButton {
+    background-color: white;
+    color: navy;
+    border-radius: 15px;
+    padding: 10px;
+    margin: 0 5px;
+    border: 2px solid navy;
+}
